--- a/index.html
+++ b/index.html
@@ -14,172 +14,87 @@
 
 <body>
   <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/js/tabler.min.js"></script>
-  <div class="page-header m-3">
-    <div class="row align-items-center">
-      <div class="col">
-
-        <h2 class="page-title">
-          MY RECIPE BOOK
-        </h2>
-      </div>
-      <div class="col-auto ms-auto">
-        <div class="btn-list">
-          <span class="d-none d-sm-inline">
-            <div class="input-icon">
-              <input type="text" value="" class="form-control" placeholder="Search…" data-has-listeners="true">
-              <span class="input-icon-addon">
-                <!-- Download SVG icon from http://tabler-icons.io/i/search -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                  <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
-                  <path d="M21 21l-6 -6"></path>
-                </svg>
-              </span>
+  <div class="page page-center">
+    <div class="container container-tight py-4">
+      <div class="card card-md">
+        <div class="card-body">
+          <h2 class="h2 text-center mb-4">Login</h2>
+          <form action="./" method="get" autocomplete="off" novalidate="">
+            <div class="mb-3">
+              <label class="form-label custom-cursor-default-hover">Username</label>
+              <input type="text" class="form-control" placeholder="Enter Username" autocomplete="off"
+                data-has-listeners="true">
             </div>
-          </span>
-          <a class="btn btn-primary d-none d-sm-inline-block" data-bs-toggle="offcanvas" href="#offcanvasEnd"
-            role="button" aria-controls="offcanvasEnd">
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
-              stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <line x1="12" y1="5" x2="12" y2="19" />
-              <line x1="5" y1="12" x2="19" y2="12" />
-            </svg>
-            Add Recipe
-          </a>
-
-          <span>
-            <button class="btn btn-light"><i class="ti ti-logout fs-2"></i></button>
-          </span>
+            <div class="mb-2">
+              <label class="form-label">
+                Password
+                <span class="form-label-description">
+                  <a href="./forgot-password.html">I forgot password</a>
+                </span>
+              </label>
+              <div class="input-group input-group-flat">
+                <input type="password" class="form-control" placeholder="Your password" autocomplete="off"
+                  data-has-listeners="true">
+                <span class="input-group-text">
+                  <a href="#" class="link-secondary" data-bs-toggle="tooltip" aria-label="Show password"
+                    data-bs-original-title="Show password"><!-- Download SVG icon from http://tabler-icons.io/i/eye -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
+                      <path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6">
+                      </path>
+                    </svg>
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="mb-2">
+              <label class="form-check">
+                <input type="checkbox" class="form-check-input" data-has-listeners="true">
+                <span class="form-check-label">Remember me on this device</span>
+              </label>
+            </div>
+            <div class="form-footer">
+              <button type="submit" class="btn btn-primary w-100">Sign in</button>
+            </div>
+          </form>
         </div>
+        <div class="hr-text">or</div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col"><a href="#" class="btn w-100">
+                <!-- Download SVG icon from http://tabler-icons.io/i/brand-github -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="icon text-github">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                  <path
+                    d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5">
+                  </path>
+                </svg>
+                Login with Github
+              </a></div>
+            <div class="col"><a href="#" class="btn w-100">
+                <!-- Download SVG icon from http://tabler-icons.io/i/brand-x -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="icon text-x">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                  <path d="M4 4l11.733 16h4.267l-11.733 -16z"></path>
+                  <path d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772"></path>
+                </svg>
+                Login with X
+              </a></div>
+          </div>
+        </div>
+      </div>
+      <div class="text-center text-secondary mt-3">
+        Don't have account yet? <a href="./sign-up.html" tabindex="-1">Sign up</a>
       </div>
     </div>
   </div>
 
-  <div class="login">
- 
-
-    <!-- <div class="home">
-        <h2><a href="index.html">MY RECIPE BOOK</a></h2>
-        <input type="text" placeholder="Search"><br>
-        <button type="button">Add A Recipe</button> <br>
-        <input name="submit1" type="submit" id="submit1" value="log out"> -->
-    <marquee>
-      <!--content illa nokkitt pinne add cheyyam-->
-    </marquee>
-
-    <div class="page-body">
-      <div class="container-xl">
-        <div class="row row-cards">
-          <div class="col-md-6 col-xl-3">
-            <a class="card card-link" href="#">
-              <div class="card-cover card-cover-blurred text-center" style="height:30vh; background-image: url(./static/photos/blond-using-her-laptop-at-her-bedroom.jpg
-)">
-              </div>
-              <div class="card-body text-center">
-                <div class="card-title mb-1">Marsha Labat</div>
-                <div class="text-secondary">Research Associate</div>
-                <a class="btn btn-primary"> Read More...</a>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-6 col-xl-3">
-            <a class="card card-link" href="#">
-              <div class="card-cover card-cover-blurred text-center" style="height:30vh;background-image: url(./static/photos/blond-using-her-laptop-at-her-bedroom.jpg
-)">
-              </div>
-              <div class="card-body text-center">
-                <div class="card-title mb-1">Marsha Labat</div>
-                <div class="text-secondary">Research Associate</div>
-                <a class="btn btn-primary"> Read More...</a>
-
-              </div>
-            </a>
-          </div>
-          <div class="col-md-6 col-xl-3">
-            <a class="card card-link" href="#">
-              <div class="card-cover card-cover-blurred text-center" style="height:30vh;background-image: url(./static/photos/blond-using-her-laptop-at-her-bedroom.jpg
-)">
-              </div>
-              <div class="card-body text-center">
-                <div class="card-title mb-1">Marsha Labat</div>
-                <div class="text-secondary">Research Associate</div>
-                <a class="btn btn-primary"> Read More...</a>
-
-              </div>
-            </a>
-          </div>
-          <div class="col-md-6 col-xl-3">
-            <a class="card card-link" href="#">
-              <div class="card-cover card-cover-blurred text-center" style="height:30vh;background-image: url(./static/photos/blond-using-her-laptop-at-her-bedroom.jpg
-)">
-              </div>
-              <div class="card-body text-center">
-                <div class="card-title mb-1">Marsha Labat</div>
-                <div class="text-secondary">Research Associate</div>
-                <a class="btn btn-primary"> Read More...</a>
-
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="card card-md sticky-top">
-      <div class="card-stamp card-stamp-lg">
-        <div class="card-stamp-icon bg-primary">
-          <!-- Download SVG icon from http://tabler-icons.io/i/ghost -->
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-            <path
-              d="M5 11a7 7 0 0 1 14 0v7a1.78 1.78 0 0 1 -3.1 1.4a1.65 1.65 0 0 0 -2.6 0a1.65 1.65 0 0 1 -2.6 0a1.65 1.65 0 0 0 -2.6 0a1.78 1.78 0 0 1 -3.1 -1.4v-7">
-            </path>
-            <path d="M10 10l.01 0"></path>
-            <path d="M14 10l.01 0"></path>
-            <path d="M10 14a3.5 3.5 0 0 0 4 0"></path>
-          </svg>
-        </div>
-      </div>
-   
-    </div>
-
-  
-
-    
-
-
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasEnd" aria-labelledby="offcanvasEndLabel"
-      aria-modal="true" role="dialog">
-      <div class="offcanvas-header">
-        <h2 class="offcanvas-title" id="offcanvasEndLabel">Add Recipe</h2>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <fieldset class="form-fieldset">
-          <div class="mb-3">
-            <label class="form-label required custom-cursor-default-hover">Add A Recipe</label>
-            <input type="text" class="form-control" autocomplete="off" data-has-listeners="true">
-          </div>
-          <div class="mb-3">
-            <label class="form-label required custom-cursor-default-hover">Recipe Image Url</label>
-            <input type="text" class="form-control" autocomplete="off" data-has-listeners="true">
-          </div>
-          <div class="mb-3">
-            <label class="form-label required">Recipe Discription</label>
-            <input type="email" class="form-control" autocomplete="off" data-has-listeners="true">
-          </div>
-
-        </fieldset>
-        <div class="mt-3">
-          <button class="btn btn-primary" type="button" data-bs-dismiss="offcanvas">
-            Submit
-          </button>
-        </div>
-      </div>
-    </div>
 </body>
-
 </html>
