added screen changes

--- a/home/home.html
+++ b/home/home.html
@@ -16,15 +16,15 @@
   <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/js/tabler.min.js"></script>
   <div class="page-header m-3">
     <div class="row align-items-center">
-      <div class="col">
+      <div class="col-lg-6 col-md-5 col-sm-12">
 
         <h2 class="page-title">
           MY RECIPE BOOK
         </h2>
       </div>
-      <div class="col-auto ms-auto">
+      <div class="col-lg-6 col-md-7 col-sm-12 d-flex justify-content-end">
         <div class="btn-list">
-          <span class="d-none d-sm-inline">
+          <span class="d-sm-inline ">
             <div class="input-icon">
               <input type="text" value="" class="form-control" placeholder="Search…" data-has-listeners="true">
               <span class="input-icon-addon">
@@ -38,7 +38,7 @@
               </span>
             </div>
           </span>
-          <a class="btn btn-primary d-none d-sm-inline-block" data-bs-toggle="offcanvas" href="#offcanvasEnd"
+          <a class="btn btn-primary d-sm-inline-block " data-bs-toggle="offcanvas" href="#offcanvasEnd"
             role="button" aria-controls="offcanvasEnd">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
               stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
