--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler-vendors.min.css">
 </head>
 
-<body>
+<body class="bg-cover" style="background-image: url('./assets/image/bg.jpg')">
   <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/js/tabler.min.js"></script>
   <div class="page page-center">
     <div class="container container-tight py-4">
-      <div class="card card-md">
+      <div class="card card-md border-0" style="background: rgba(0, 0, 0, 0.4)">
         <div class="card-body">
-          <h2 class="h2 text-center mb-4">Login</h2>
+          <h2 class="h2 text-center mb-4 text-light">Login</h2>
           <form action="./" method="get" autocomplete="off" novalidate="">
             <div class="mb-3">
-              <label class="form-label custom-cursor-default-hover">Username</label>
+              <label class="form-label custom-cursor-default-hover text-light">Username</label>
               <input type="text" class="form-control" placeholder="Enter Username" autocomplete="off"
                 data-has-listeners="true">
             </div>
             <div class="mb-2">
-              <label class="form-label">
+              <label class="form-label text-light">
                 Password
                 
               </label>
@@ -56,8 +56,8 @@
         </div>
       
       </div>
-      <div class="text-center text-secondary mt-3">
-        Don't have account yet? <a href="./sign-up.html" tabindex="-1">Sign up</a>
+      <div class="text-center text-secondary mt-3 text-light">
+        Don't have account yet? <a class="text-azure" href="./sign-up.html" tabindex="-1">Sign up</a>
       </div>
     </div>
   </div>
